--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
     <link href='https://fonts.googleapis.com/css?family=Arvo:400,700,400italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="/assets/css/newtek.css">
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -35,10 +36,10 @@
             <li><a class="buttons github" href="{{ site.github.repository_url }}">GitHub Profile</a></li>
           </ul>
         {% endif %}
-        {% for doc in site.patterns%}
-          <h2><a href="/{{doc.category}}">{{doc.category }}</a></h2>
-
-{% endfor %}
+        {% assign docs = site.pages | sort: 'order' %}
+        {% for doc in docs %}
+          <h2><a href="{{doc.url}}">{{doc.title}}</a></h2>
+        {% endfor %}
       </header>
 
       <section>
