--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         {% endif %}
         {% assign docs = site.pages | sort: 'order' %}
         {% for doc in docs %}
-          <h2><a href="{{doc.url}}">{{doc.title}}</a></h2>
+          <h3><a href="{{site.baseurl}}{{doc.url}}">{{doc.title}}</a></h3>
         {% endfor %}
       </header>
 
