--- a/_includes/lorem.html
+++ b/_includes/lorem.html
@@ -1,9 +1,7 @@
----
----
-<h2>{{include.type}}</h2>
-{% if include.type == "short"}
+
+{% if include.length contains "short" %}
     Lorem ipsum dolor sit amet
-{% elsif include.type == "medium"}
+{% elsif include.length == "medium" %}
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 {% else %}
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
